src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>tz__Local_Time_Short__c</fullName>
        <description>Shows the current local time (without date) for the Account.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, 	tz__Timezone__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the local time (without date) for the Account.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the current local time for the Account.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 4 ) &amp; &quot; &quot; &amp;
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;) 
)</formula>
        <inlineHelpText>Shows the local time for the Account.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full__c</fullName>
        <description>Full timezone name.</description>
        <inlineHelpText>Full timezone name.</inlineHelpText>
        <label>Timezone (Full)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_IANA__c</fullName>
        <description>Timezone as defined by Internet Assigned Numbers Authority (IANA).</description>
        <inlineHelpText>Timezone as defined by Internet Assigned Numbers Authority (IANA).</inlineHelpText>
        <label>Timezone (IANA)</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Current timezone abbreviation (PST, EST,etc..)</description>
        <inlineHelpText>Timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTF_Offset__c</fullName>
        <description>Shows the current UTC timezone offset of the Account. Uses the Billing address, and in its absence the Phone number field in the calculation.</description>
        <inlineHelpText>Shows the UTC timezone offset of the Account.</inlineHelpText>
        <label>UTC Offset</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Backend_Ownership_Change</fullName>
        <active>false</active>
        <errorConditionFormula>NOT ( PRIORVALUE(OwnerId) == &quot;00510000003Kv6B&quot;) &amp;&amp; ISCHANGED(OwnerId) &amp;&amp; NOT( ISNEW() )</errorConditionFormula>
        <errorMessage>You cannot change ownership of this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Support_cannot_change_name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Name!=  PRIORVALUE(Name), $Profile.Name ==&quot;Read Only - Custom&quot; )</errorConditionFormula>
        <errorMessage>You cannot change account name</errorMessage>
    </validationRules>
</CustomObject>